clustering needs work

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -1640,9 +1640,9 @@
     "### Model Performace\n",
     "Our Model performed well, having an accuracy of 70% and an AUC score of 75%. There are most likely ways to improve the classifier, and we will continue to train the model. \n",
     "\n",
-    "For our new labeling scheme, we got an accuracy of 76% and an AUC score of 78.\n",
+    "For our new labeling scheme, we got an accuracy of 76% and an AUC score of 78%.\n",
     "\n",
-    "For "
+    "For the clustered labels, we got an accuracy of 75.3% and an AUC score of 81.1%."
    ]
   },
   {
