--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1608,23 +1608,23 @@
     "# train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "# tvec_optimised = TfidfVectorizer(max_df= 0.5, max_features=70, min_df=2, ngram_range=(1, 3),stop_words = 'english')\n",
-    "tvec_optimised = TfidfVectorizer(max_df= 0.5, min_df=2, ngram_range=(1, 3),stop_words = 'english')\n",
+    "tvec_optimised = TfidfVectorizer(max_df= 0.5, max_features=70, min_df=2, ngram_range=(1, 3),stop_words = 'english')\n",
+    "# tvec_optimised = TfidfVectorizer(max_df= 0.5, min_df=2, ngram_range=(1, 3),stop_words = 'english')\n",
     "X_train_tvec = tvec_optimised.fit_transform(X_train).todense()\n",
     "X_test_tvec = tvec_optimised.transform(X_test).todense()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8131578947368421\n",
-      "AUC Score: 0.9200592998061352\n"
+      "Accuracy: 0.7526315789473684\n",
+      "AUC Score: 0.8107252822442695\n"
      ]
     }
    ],
