added softmax for probability distribution

--- a/notebooks/BERT/workingBertModel.ipynb
+++ b/notebooks/BERT/workingBertModel.ipynb
@@ -52,7 +52,7 @@
       "source": [
         "!pip install transformers"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
         "og_batch_1 = df[['selftext', 'is_suicide']]\n",
         "\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
         "batch_1 = og_batch_1.rename(columns={'selftext': 0, 'is_suicide': 1})\n",
         "batch_1.head()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,7 +263,7 @@
       "source": [
         "batch_1[1].value_counts()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +310,7 @@
         "tokenizer = tokenizer_class.from_pretrained(pretrained_weights)\n",
         "model = model_class.from_pretrained(pretrained_weights)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,7 +339,7 @@
       "source": [
         "tokenized = batch_1[0].apply((lambda x: tokenizer.encode(x, add_special_tokens=True, truncation=True, max_length=128)))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
         "\n",
         "padded = np.array([i + [0]*(max_len-len(i)) for i in tokenized.values])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +384,7 @@
       "source": [
         "np.array(padded).shape"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +426,7 @@
         "attention_mask = np.where(padded != 0, 1, 0)\n",
         "attention_mask.shape"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,7 +456,7 @@
         "with torch.no_grad():\n",
         "    last_hidden_states = model(input_ids, attention_mask=attention_mask)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -474,7 +474,7 @@
         "features = last_hidden_states[0][:,0,:].numpy()\n",
         "print(features)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -522,7 +522,7 @@
         "labels = batch_1[1]\n",
         "labels.head()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,7 +564,7 @@
       "source": [
         "train_features, test_features, train_labels, test_labels = train_test_split(features, labels, test_size=0.25, random_state=42, stratify=labels)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +582,7 @@
         "# print('best parameters: ', grid_search.best_params_)\n",
         "# print('best scrores: ', grid_search.best_score_)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +616,8 @@
         "model3.add(Dense(1, activation='sigmoid'))\n",
         "\n",
         "model3.add(Dense(10, activation='relu'))\n",
-        "model3.add(Dense(1, activation='sigmoid'))\n",
+        "# model3.add(Dense(1, activation='sigmoid'))\n",
+        "model3.add(Dense(2, activation = 'softmax')) # this gives the probability distribution for each class, should be 1 hot encoded, maybe we take this out of the model and only use it when predicting\n",
         "\n",
         "model3.compile(optimizer='adam',\n",
         "              loss='binary_crossentropy',\n",
@@ -628,7 +629,7 @@
         "\n",
         "history = model3.fit(train_features, train_labels, batch_size=32, epochs=100, verbose=1, callbacks=[checkpoint], validation_data=(test_features, test_labels))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1055,7 +1056,7 @@
         "loadedModel = load_model('/content/bertmodelRegLabels.h5')\n",
         "loadedModel.evaluate(test_features, test_labels)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1119,7 +1120,7 @@
         "scores = cross_val_score(clf, train_features, train_labels)\n",
         "print(\"Dummy classifier score: %0.3f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1157,7 +1158,7 @@
       "source": [
         ""
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     }
   ]
