sigmoid works as confidence threshold

--- a/notebooks/BERT/bert_predictor.ipynb
+++ b/notebooks/BERT/bert_predictor.ipynb
@@ -25,6 +25,64 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6dWbUXVkDMaI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 615
+        },
+        "outputId": "25ee021c-a782-4ee4-a65b-f6640ebab2bf"
+      },
+      "source": [
+        "!pip install transformers"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting transformers\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ae/05/c8c55b600308dc04e95100dc8ad8a244dd800fe75dfafcf1d6348c6f6209/transformers-3.1.0-py3-none-any.whl (884kB)\n",
+            "\u001b[K     |████████████████████████████████| 890kB 2.8MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from transformers) (1.18.5)\n",
+            "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers) (0.7)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers) (2.23.0)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.6/dist-packages (from transformers) (4.41.1)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.6/dist-packages (from transformers) (20.4)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers) (3.0.12)\n",
+            "Collecting tokenizers==0.8.1.rc2\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/80/83/8b9fccb9e48eeb575ee19179e2bdde0ee9a1904f97de5f02d19016b8804f/tokenizers-0.8.1rc2-cp36-cp36m-manylinux1_x86_64.whl (3.0MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.0MB 15.3MB/s \n",
+            "\u001b[?25hRequirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers) (2019.12.20)\n",
+            "Collecting sacremoses\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7d/34/09d19aff26edcc8eb2a01bed8e98f13a1537005d31e95233fd48216eed10/sacremoses-0.0.43.tar.gz (883kB)\n",
+            "\u001b[K     |████████████████████████████████| 890kB 27.1MB/s \n",
+            "\u001b[?25hCollecting sentencepiece!=0.1.92\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d4/a4/d0a884c4300004a78cca907a6ff9a5e9fe4f090f5d95ab341c53d28cbc58/sentencepiece-0.1.91-cp36-cp36m-manylinux1_x86_64.whl (1.1MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.1MB 11.8MB/s \n",
+            "\u001b[?25hRequirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2020.6.20)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2.10)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from packaging->transformers) (1.15.0)\n",
+            "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->transformers) (2.4.7)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (7.1.2)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (0.16.0)\n",
+            "Building wheels for collected packages: sacremoses\n",
+            "  Building wheel for sacremoses (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for sacremoses: filename=sacremoses-0.0.43-cp36-none-any.whl size=893257 sha256=7e8b2e9119a9a253ad86d2c27d919e059f1fb3075cbfc58c141df907f23b3595\n",
+            "  Stored in directory: /root/.cache/pip/wheels/29/3c/fd/7ce5c3f0666dab31a50123635e6fb5e19ceb42ce38d4e58f45\n",
+            "Successfully built sacremoses\n",
+            "Installing collected packages: tokenizers, sacremoses, sentencepiece, transformers\n",
+            "Successfully installed sacremoses-0.0.43 sentencepiece-0.1.91 tokenizers-0.8.1rc2 transformers-3.1.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "eFwoEU3nJ1Pi",
         "colab_type": "code",
         "colab": {}
@@ -55,7 +113,7 @@
         "loadedModel = load_model('/content/bertmodelRegLabels.h5')\n",
         "\n"
       ],
-      "execution_count": 37,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -77,10 +135,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9ccee1e7-201d-490a-e974-d7f49c61beb4"
+        "outputId": "dc40b599-9b7c-43b0-da8a-9a2be0d813fc"
       },
       "source": [
-        "test_data = {0: [\"I tried to hang myself today. It didn't work. I don't know where to go from here or what to do. I guess I'll try again some other way.\"]}\n",
+        "test_data = {0: [\"I've always been trashed my whole life. When people don't see a reason to use me anymore, I get dumped, this shit happens since my first teenage years and idk why at all. I try to always be kind with everyone, I apologize for my mistakes, I try to help people around me but when I need no one fucking helps me. I'm tired of being alone, I'm tired of always being the third wheel, it just seems like everyone else is better and more important than me, i just want someone to actually care about me.\"]}\n",
         "test_text = pd.DataFrame(test_data, columns = [0])\n",
         "\n",
         "## Want BERT instead of distilBERT? Uncomment the following line:\n",
@@ -99,10 +157,7 @@
         "\n",
         "padded = np.array([i + [0]*(max_len-len(i)) for i in tokenized.values])\n",
         "\n",
-        "np.array(padded).shape\n",
-        "\n",
         "attention_mask = np.where(padded != 0, 1, 0)\n",
-        "attention_mask.shape\n",
         "\n",
         "input_ids = torch.tensor(padded)  \n",
         "attention_mask = torch.tensor(attention_mask)\n",
@@ -116,12 +171,12 @@
         "predictions = loadedModel.predict(features)\n",
         "print(predictions)"
       ],
-      "execution_count": 39,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0.7012777]]\n"
+            "[[0.18759483]]\n"
           ],
           "name": "stdout"
         }
@@ -137,7 +192,7 @@
       "source": [
         "\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     }
   ]
