--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -10,9 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy import array\n",
@@ -59,16 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data = pd.read_csv('../data/cleaned_data_casual.csv', keep_default_na=False)"
+    "model_data = pd.read_csv('../data/depression_vs_nothing.csv', keep_default_na=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -98,85 +106,63 @@
        "      <th>num_comments</th>\n",
        "      <th>is_suicide</th>\n",
        "      <th>url</th>\n",
-       "      <th>selftext_clean</th>\n",
-       "      <th>title_clean</th>\n",
-       "      <th>author_clean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2698</th>\n",
-       "      <td>thoughts on horror movies</td>\n",
-       "      <td>what are your guys thoughts on horror movies? ...</td>\n",
-       "      <td>donkeyballs8291</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
+       "      <th>1750</th>\n",
+       "      <td>After 30 years of being open, my family’s rest...</td>\n",
+       "      <td>My family has owned a fine dining italian rest...</td>\n",
+       "      <td>retirereddit</td>\n",
+       "      <td>769</td>\n",
+       "      <td>1</td>\n",
        "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
-       "      <td>guy thought horror movie usually hate scared e...</td>\n",
-       "      <td>thought horror movie</td>\n",
-       "      <td>donkey ball 8291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2699</th>\n",
-       "      <td>Cut my father-in-law's fibre optic cable</td>\n",
-       "      <td>While installing an ethernet cable to have Wi-...</td>\n",
-       "      <td>slipperman1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <th>1751</th>\n",
+       "      <td>This coronavirus things has made me realize pe...</td>\n",
+       "      <td>Just live streams of people at home getting in...</td>\n",
+       "      <td>ghost_sanctum</td>\n",
+       "      <td>2996</td>\n",
+       "      <td>1</td>\n",
        "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
-       "      <td>installing ethernet cable wi fi around house c...</td>\n",
-       "      <td>cut father law fibre optic cable</td>\n",
-       "      <td>slipper man 1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2700</th>\n",
-       "      <td>COVID and Schools (college edition)</td>\n",
-       "      <td>How do you guys feel about going back to schoo...</td>\n",
-       "      <td>naturally_ares</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
+       "      <th>1752</th>\n",
+       "      <td>I’m a lunch lady at an elementary school schoo...</td>\n",
+       "      <td>At first I was mad that I would still have to ...</td>\n",
+       "      <td>befuddledghostie</td>\n",
+       "      <td>1695</td>\n",
+       "      <td>1</td>\n",
        "      <td>https://www.reddit.com/r/CasualConversation/co...</td>\n",
-       "      <td>guy feel going back school still worth read ar...</td>\n",
-       "      <td>covid school college edition</td>\n",
-       "      <td>naturally</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         title  \\\n",
-       "2698                 thoughts on horror movies   \n",
-       "2699  Cut my father-in-law's fibre optic cable   \n",
-       "2700       COVID and Schools (college edition)   \n",
+       "                                                  title  \\\n",
+       "1750  After 30 years of being open, my family’s rest...   \n",
+       "1751  This coronavirus things has made me realize pe...   \n",
+       "1752  I’m a lunch lady at an elementary school schoo...   \n",
        "\n",
-       "                                               selftext           author  \\\n",
-       "2698  what are your guys thoughts on horror movies? ...  donkeyballs8291   \n",
-       "2699  While installing an ethernet cable to have Wi-...      slipperman1   \n",
-       "2700  How do you guys feel about going back to schoo...   naturally_ares   \n",
+       "                                               selftext            author  \\\n",
+       "1750  My family has owned a fine dining italian rest...      retirereddit   \n",
+       "1751  Just live streams of people at home getting in...     ghost_sanctum   \n",
+       "1752  At first I was mad that I would still have to ...  befuddledghostie   \n",
        "\n",
        "      num_comments  is_suicide  \\\n",
-       "2698             5           2   \n",
-       "2699             0           2   \n",
-       "2700             7           2   \n",
+       "1750           769           1   \n",
+       "1751          2996           1   \n",
+       "1752          1695           1   \n",
        "\n",
-       "                                                    url  \\\n",
-       "2698  https://www.reddit.com/r/CasualConversation/co...   \n",
-       "2699  https://www.reddit.com/r/CasualConversation/co...   \n",
-       "2700  https://www.reddit.com/r/CasualConversation/co...   \n",
-       "\n",
-       "                                         selftext_clean  \\\n",
-       "2698  guy thought horror movie usually hate scared e...   \n",
-       "2699  installing ethernet cable wi fi around house c...   \n",
-       "2700  guy feel going back school still worth read ar...   \n",
-       "\n",
-       "                           title_clean      author_clean  \n",
-       "2698              thought horror movie  donkey ball 8291  \n",
-       "2699  cut father law fibre optic cable     slipper man 1  \n",
-       "2700      covid school college edition         naturally  "
+       "                                                    url  \n",
+       "1750  https://www.reddit.com/r/CasualConversation/co...  \n",
+       "1751  https://www.reddit.com/r/CasualConversation/co...  \n",
+       "1752  https://www.reddit.com/r/CasualConversation/co...  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -195,21 +181,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2701 entries, 0 to 2700\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column          Non-Null Count  Dtype \n",
-      "---  ------          --------------  ----- \n",
-      " 0   title           2701 non-null   object\n",
-      " 1   selftext        2701 non-null   object\n",
-      " 2   author          2701 non-null   object\n",
-      " 3   num_comments    2701 non-null   int64 \n",
-      " 4   is_suicide      2701 non-null   int64 \n",
-      " 5   url             2701 non-null   object\n",
-      " 6   selftext_clean  2701 non-null   object\n",
-      " 7   title_clean     2701 non-null   object\n",
-      " 8   author_clean    2701 non-null   object\n",
-      "dtypes: int64(2), object(7)\n",
-      "memory usage: 190.0+ KB\n"
+      "RangeIndex: 1753 entries, 0 to 1752\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   title         1753 non-null   object\n",
+      " 1   selftext      1753 non-null   object\n",
+      " 2   author        1753 non-null   object\n",
+      " 3   num_comments  1753 non-null   int64 \n",
+      " 4   is_suicide    1753 non-null   int64 \n",
+      " 5   url           1753 non-null   object\n",
+      "dtypes: int64(2), object(4)\n",
+      "memory usage: 82.3+ KB\n"
      ]
     }
    ],
@@ -226,16 +209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9581636430951499"
+       "0.4768967484312607"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,9 +319,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'selftext_clean'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2645\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2646\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2647\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'selftext_clean'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-e414a941dd59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# getting ready for training\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"selftext_clean\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'is_suicide'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# train/test split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2798\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2799\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2800\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2801\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2802\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2646\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2647\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2648\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2649\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2650\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'selftext_clean'"
+     ]
+    }
+   ],
    "source": [
     "# getting ready for training\n",
     "\n",
